--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Oberon</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" href="./assets/img/fav-icon.png" >
+    <script src="./assets/js/script.js" defer></script>
 </head>
 <body>
     <section class="hero__section">
@@ -14,6 +15,11 @@
             <nav class="navbar">
                 <div class="nav__logo">
                     <img src="./assets/img/logo.svg" alt="">
+                </div>
+                <div class="mobile__menu" onclick="mobileNavBar()">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
                 </div>
                 <ul class="nav__links">
                     <li><a href="#">Quem somos</a></li>
@@ -23,6 +29,25 @@
                 </ul>
             </nav>
         </nav>
+        <div class="hero__texts">
+            <div class="left">
+                <h1>LOREM IPSUM DANE-SE</h1>
+                <p>Mais lorem ipsum porque não sei o que escrever</p>
+                <button>navegue</button>
+            </div>
+            <div class="right">
+                    <img src="./assets/img/hero-circle.png" alt="">
+                    <div class="line__text">
+                        <div class="circle">
+                        </div>
+                        <p>
+                            <strike>tecnologia</strike>
+                            sustentabilidade
+                            é o futuro
+                        </p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
