--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oberon</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" href="./assets/img/fav-icon.png" >
+    <link rel="icon" href="./assets/img/fav-icon.png">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <script src="./assets/js/script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;300;500;700;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <section class="hero__section">
@@ -22,10 +27,10 @@
                     <div class="line3"></div>
                 </div>
                 <ul class="nav__links">
-                    <li><a href="#">Quem somos</a></li>
-                    <li><a href="#">Projetos</a></li>
-                    <li><a href="#">Nosso Time</a></li>
-                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#" onclick="mobileNavBar()">Quem somos</a></li>
+                    <li><a href="#" onclick="mobileNavBar()">Projetos</a></li>
+                    <li><a href="#" onclick="mobileNavBar()">Nosso Time</a></li>
+                    <li><a href="#" onclick="mobileNavBar()">Serviços</a></li>
                 </ul>
             </nav>
         </nav>
@@ -45,6 +50,39 @@
                             sustentabilidade
                             é o futuro
                         </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about__section container-fluid pb-5">
+        <div class="container row mx-auto justify-content-between align-items-center">
+            <div class="col-sm-12 col-md-4 about__title mb-5">QUEM SOMOS</div>
+            <div class="col-sm-12 col-md-7 about__text">A Oberon existe porque precisamos de ideias tecnológicas revolucionarias para as pessoas e o meio ambiente. Somos uma equipe comprometida com a inovação para melhorar a qualidade de vida do ser humano e do próprio planeta.</div>
+        </div>
+        <div class="container-fluid our__values__bg ">
+            <div class="container our__values mt-5 px-5 py-5 mb-5">
+                <div class="row fs-1 mb-2 title values">
+                    Nossos valores
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-4">
+                        <p class="title fs-3 mb-1">Excelência</p>
+                        <p class="text fs-5">
+                            Paixão ao compromisso de desenvolver os melhores produtos e serviços.
+                        </p>
+                    </div>
+                    <div class="col-sm-12 col-md-4">
+                        <p class="title fs-3 mb-1">Mudança</p>
+                        <p class="text fs-5">
+                            Visões para o futuro,  direcionando soluções que gerem ipacto.
+                        </p>
+                    </div>
+                    <div class="col-sm-12 col-md-4">
+                        <p class="title fs-3 mb-1">Ambição</p>
+                        <p class="text fs-5">
+                            Visões para o futuro,  direcionando soluções que gerem ipacto.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
