--- a/index.html
+++ b/index.html
@@ -87,5 +87,52 @@
             </div>
         </div>
     </section>
+    <section class="projects__section container-fluid pb-5">
+        <div class="container row mx-auto justify-content-between align-items-center mt-5">
+            <div class="col-sm-12 col-md-4 projects__title px-3">Projetos</div>
+            <div class="col-sm-12 col-md-8 projects__text">Veja como é feito o nosso trabalho e confira os projetos mais recentes desenvolvidos pelo nosso time.</div>
+        </div>
+        <section class="container-fluid">
+            <div class="cards container">
+                <div class="left__cards">
+                <h2 class="recent">Mais recentes</h2>
+                    <div class="texts">
+                        <div class="logo">
+                            <img src="./assets/img/logo-odin.png" alt="">
+                        </div>
+                        <p class="info">
+                            Um sistema de rastreamento e coleta de lixo de praia. Drone e robô configurados por uma IA e uma interface onde o usuário pode controlar esses periféricos.
+                        </p>
+                        <button class="read__more">
+                            Ler mais sobre
+                        </button>
+                    </div>
+                    <div class="project__image">
+                        <img src="./assets/img/project-image.png" alt="">
+                    </div>
+                </div>
+                <div class="right__cards">
+                    <div class="texts proj2">
+                        <div class="title">
+                            <strong>Projetos Futuros</strong>
+                        </div>
+                        <p class="info">
+                            Texto de descrição rápida com hover.
+                        </p>
+                </div>
+                <div class="texts proj3">
+                    <div class="title">
+                        <strong>Projetos Futuros</strong>
+                    </div>
+                    <p class="info">
+                        Texto de descrição rápida com hover.
+                    </p>
+            </div>
+            </div>
+        </section>
+        <div class="container d-flex justify-content-end mt-4">
+            <a class="fs-5" href="#">ver todos os projetos</a>
+        </div>
+    </section>
 </body>
 </html>
