--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;300;500;700;900&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
     <section class="hero__section">
         <nav class="nav__container">
@@ -41,15 +43,15 @@
                 <button>navegue</button>
             </div>
             <div class="right">
-                    <img src="./assets/img/hero-circle.png" alt="">
-                    <div class="line__text">
-                        <div class="circle">
-                        </div>
-                        <p>
-                            <strike>tecnologia</strike>
-                            sustentabilidade
-                            é o futuro
-                        </p>
+                <img src="./assets/img/hero-circle.png" alt="">
+                <div class="line__text">
+                    <div class="circle">
+                    </div>
+                    <p>
+                        <strike>tecnologia</strike>
+                        sustentabilidade
+                        é o futuro
+                    </p>
                 </div>
             </div>
         </div>
@@ -57,7 +59,9 @@
     <section class="about__section container-fluid pb-5">
         <div class="container row mx-auto justify-content-between align-items-center">
             <div class="col-sm-12 col-md-4 about__title mb-5">QUEM SOMOS</div>
-            <div class="col-sm-12 col-md-7 about__text">A Oberon existe porque precisamos de ideias tecnológicas revolucionarias para as pessoas e o meio ambiente. Somos uma equipe comprometida com a inovação para melhorar a qualidade de vida do ser humano e do próprio planeta.</div>
+            <div class="col-sm-12 col-md-7 about__text">A Oberon existe porque precisamos de ideias tecnológicas
+                revolucionarias para as pessoas e o meio ambiente. Somos uma equipe comprometida com a inovação para
+                melhorar a qualidade de vida do ser humano e do próprio planeta.</div>
         </div>
         <div class="container-fluid our__values__bg ">
             <div class="container our__values mt-5 px-5 py-5 mb-5">
@@ -74,13 +78,13 @@
                     <div class="col-sm-12 col-md-4">
                         <p class="title fs-3 mb-1">Mudança</p>
                         <p class="text fs-5">
-                            Visões para o futuro,  direcionando soluções que gerem ipacto.
+                            Visões para o futuro, direcionando soluções que gerem ipacto.
                         </p>
                     </div>
                     <div class="col-sm-12 col-md-4">
                         <p class="title fs-3 mb-1">Ambição</p>
                         <p class="text fs-5">
-                            Visões para o futuro,  direcionando soluções que gerem ipacto.
+                            Visões para o futuro, direcionando soluções que gerem ipacto.
                         </p>
                     </div>
                 </div>
@@ -90,18 +94,20 @@
     <section class="projects__section container-fluid pb-5">
         <div class="container row mx-auto justify-content-between align-items-center mt-5">
             <div class="col-sm-12 col-md-4 projects__title px-3">Projetos</div>
-            <div class="col-sm-12 col-md-8 projects__text">Veja como é feito o nosso trabalho e confira os projetos mais recentes desenvolvidos pelo nosso time.</div>
+            <div class="col-sm-12 col-md-8 projects__text">Veja como é feito o nosso trabalho e confira os projetos mais
+                recentes desenvolvidos pelo nosso time.</div>
         </div>
         <section class="container-fluid">
             <div class="cards container">
                 <div class="left__cards">
-                <h2 class="recent">Mais recentes</h2>
+                    <h2 class="recent">Mais recentes</h2>
                     <div class="texts">
                         <div class="logo">
                             <img src="./assets/img/logo-odin.png" alt="">
                         </div>
                         <p class="info">
-                            Um sistema de rastreamento e coleta de lixo de praia. Drone e robô configurados por uma IA e uma interface onde o usuário pode controlar esses periféricos.
+                            Um sistema de rastreamento e coleta de lixo de praia. Drone e robô configurados por uma IA e
+                            uma interface onde o usuário pode controlar esses periféricos.
                         </p>
                         <button class="read__more">
                             Ler mais sobre
@@ -119,20 +125,21 @@
                         <p class="info">
                             Texto de descrição rápida com hover.
                         </p>
-                </div>
-                <div class="texts proj3">
-                    <div class="title">
-                        <strong>Projetos Futuros</strong>
                     </div>
-                    <p class="info">
-                        Texto de descrição rápida com hover.
-                    </p>
-            </div>
-            </div>
+                    <div class="texts proj3">
+                        <div class="title">
+                            <strong>Projetos Futuros</strong>
+                        </div>
+                        <p class="info">
+                            Texto de descrição rápida com hover.
+                        </p>
+                    </div>
+                </div>
         </section>
         <div class="container d-flex justify-content-end mt-4">
             <a class="fs-5" href="#">ver todos os projetos</a>
         </div>
     </section>
 </body>
+
 </html>
