--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
         </section>
         <div class="container d-flex justify-content-end mt-4">
-            <a class="fs-5" href="#">ver todos os projetos</a>
+            <a class="fs-5 projects__link" href="#">ver todos os projetos</a>
         </div>
     </section>
 </body>
