--- a/index.html
+++ b/index.html
@@ -140,6 +140,93 @@
             <a class="fs-5 projects__link" href="#">ver todos os projetos</a>
         </div>
     </section>
+    <section class="team__section container-fluid pb-5">
+        <div class="container pb-5 team_container">
+            <div class="col-sm-12 col-md-5 px-3 mb-5 pt-5">
+                <h2 class="team__title">TEAM</h2>
+                <p class="team__subtitle">Conheça os integrantes da nossa equipe.</p>
+            </div>
+            <div class="team__members row d-flex justify-content-evenly">
+                <div class="col-sm-12 col-md-3 member__card card1">
+                    <div class="image">
+                        <img src="./assets/img/may.png" alt="">
+                    </div>
+                    <div class="member__infos">
+                        <h3 class="name">
+                            Mayara Karen
+                        </h3>
+                        <p class="role">
+                            Documentadora de sistemas, Scrum Master.
+                        </p>
+                        <div class="socials">
+                            <a href="#">
+                                <img src="./assets/img/linkedin.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/img/insta.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/img/twitter.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-3 member__card card2">
+                    <div class="image">
+                        <img src="./assets/img/beca.png" alt="">
+                    </div>
+                    <div class="member__infos">
+                        <h3 class="name">
+                            Rebeca Baruch
+                        </h3>
+                        <p class="role">
+                            UX/UI designer e web developer.
+                        </p>
+                        <div class="socials">
+                            <a href="#">
+                                <img src="./assets/img/linkedin.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/img/insta.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/img/twitter.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-3 member__card card3">
+                    <div class="image">
+                        <img src="./assets/img/rha.png" alt="">
+                    </div>
+                    <div class="member__infos">
+                        <h3 class="name">
+                            Rhauan de Jesus
+                        </h3>
+                        <p class="role">
+                            Java developer.
+                        </p>
+                        <div class="socials">
+                            <a href="#">
+                                <img src="./assets/img/linkedin.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/img/insta.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="./assets/img/twitter.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="services__section container-fluid ">
+        <div class="container services__container">
+            
+        </div>
+    </section>
 </body>
 
 </html>
