--- a/index.html
+++ b/index.html
@@ -222,18 +222,41 @@
             </div>
         </div>
     </section>
-    <section class="services__section container-fluid ">
-        <div class="container services__container">
-            <div class="text">NOSSOS SERVIÇOS</div>
-            <div class="services__cards">
-                    <div class="card1"></div>
-                    <div class="card2"></div>
-                    <div class="card3"></div>
-                    <div class="card4"></div>
-             </div>
-
+    <section class="services__section container-fluid">
+        <div class="container services__container ">
+            <div class="row services__cards gx-2">
+            <h2 class="side__text">NOSSOS SERVIÇOS</h2>
+                <div class="col-5 _card card1">
+                    <p class="heading">Nossos serviços</p>
+                    <p class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus cursus mauris et erat
+                        pellentesque.
+                    </p>
+                </div>
+                <div class="col-5 _card card2">
+                    <p class="heading">UX/UI</p>
+                    <p class="text">
+                        Definimos a experiência que um usuário passaria ao interagir com um produto e criamos uma interface única para ele.
+                    </p>
+                </div>
+                <div class="col-5 _card card3">
+                    <p class="heading">Desenvolvimento Mobile</p>
+                    <p class="text">
+                        Criamos soluções de TI voltadas para tablets, smartphones e outros dispositivos móveis.
+                    </p>
+                </div>
+                <div class="col-5 _card card4">
+                    <p class="heading">Desenvolvimento Web</p>
+                    <p class="text">
+                        Construímos sites, portais e sistemas voltados para o ambiente da internet. 
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
+    <footer class="footer__section">
+        aaaaaaaaa
+    </footer>
 </body>
 
 </html>
