--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </div>
     </section>
     <footer class="footer__section">
-        aaaaaaaaa
+        Footer
     </footer>
 </body>
 
