--- a/index.html
+++ b/index.html
@@ -255,7 +255,23 @@
         </div>
     </section>
     <footer class="footer__section">
-        Footer
+        <div class="footer__content">
+            <img src="./assets/img/logo-footer.png" alt="">
+            <p>Around the best</p>
+            <div class="socials">
+                <a href="#">
+                    <img src="./assets/img/linkedin.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="./assets/img/insta.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="./assets/img/twitter.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="footer__bg">
+        </div>
     </footer>
 </body>
 
