Ajustes nas imagens

--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
                         </p>
                         <div class="socials">
                             <a href="#">
-                                <img src="./assets/img/linkedin.png" alt="">
+                                <img src="./assets/img/linkedin.svg" alt="">
                             </a>
                             <a href="#">
-                                <img src="./assets/img/insta.png" alt="">
+                                <img src="./assets/img/insta.svg" alt="">
                             </a>
                             <a href="#">
-                                <img src="./assets/img/twitter.png" alt="">
+                                <img src="./assets/img/twitter.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -184,13 +184,13 @@
                         </p>
                         <div class="socials">
                             <a href="#">
-                                <img src="./assets/img/linkedin.png" alt="">
+                                <img src="./assets/img/linkedin.svg" alt="">
                             </a>
                             <a href="#">
-                                <img src="./assets/img/insta.png" alt="">
+                                <img src="./assets/img/insta.svg" alt="">
                             </a>
                             <a href="#">
-                                <img src="./assets/img/twitter.png" alt="">
+                                <img src="./assets/img/twitter.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -208,13 +208,13 @@
                         </p>
                         <div class="socials">
                             <a href="#">
-                                <img src="./assets/img/linkedin.png" alt="">
+                                <img src="./assets/img/linkedin.svg" alt="">
                             </a>
                             <a href="#">
-                                <img src="./assets/img/insta.png" alt="">
+                                <img src="./assets/img/insta.svg" alt="">
                             </a>
                             <a href="#">
-                                <img src="./assets/img/twitter.png" alt="">
+                                <img src="./assets/img/twitter.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -260,13 +260,13 @@
             <p>Around the best</p>
             <div class="socials">
                 <a href="#">
-                    <img src="./assets/img/linkedin.png" alt="">
+                    <img src="./assets/img/linkedin.svg" alt="">
                 </a>
                 <a href="#">
-                    <img src="./assets/img/insta.png" alt="">
+                    <img src="./assets/img/insta.svg" alt="">
                 </a>
                 <a href="#">
-                    <img src="./assets/img/twitter.png" alt="">
+                    <img src="./assets/img/twitter.svg" alt="">
                 </a>
             </div>
         </div>
