--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <section class="services__section container-fluid">
         <div class="container services__container ">
             <div class="row services__cards gx-2">
-            <h2 class="side__text">NOSSOS SERVIÇOS</h2>
+                <h2 class="side__text">NOSSOS SERVIÇOS</h2>
                 <div class="col-5 _card card1">
                     <p class="heading">Nossos serviços</p>
                     <p class="text">
@@ -236,7 +236,8 @@
                 <div class="col-5 _card card2">
                     <p class="heading">UX/UI</p>
                     <p class="text">
-                        Definimos a experiência que um usuário passaria ao interagir com um produto e criamos uma interface única para ele.
+                        Definimos a experiência que um usuário passaria ao interagir com um produto e criamos uma
+                        interface única para ele.
                     </p>
                 </div>
                 <div class="col-5 _card card3">
@@ -248,7 +249,7 @@
                 <div class="col-5 _card card4">
                     <p class="heading">Desenvolvimento Web</p>
                     <p class="text">
-                        Construímos sites, portais e sistemas voltados para o ambiente da internet. 
+                        Construímos sites, portais e sistemas voltados para o ambiente da internet.
                     </p>
                 </div>
             </div>
