--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
         <div class="hero__texts">
             <div class="left">
-                <div id="xml"><h1 class="teste" data-text="title"></h1></div>
+                <h1>LOREM IPSUM DANE-SE</h1>
                 <p>Mais lorem ipsum porque não sei o que escrever</p>
                 <button>navegue</button>
             </div>
